--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-brand">
-                <h1>CINE<span class="brand-highlight">SCOPE</span></h1>
+                <h1><span class="brand-highlight">MMDB</span></h1>
             </div>
             <div class="nav-links">
                 <a href="/" class="nav-link active">Movies</a>
