--- a/movie_bot/templates/movies.html
+++ b/movie_bot/templates/movies.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search Results - CineScope</title>
+    <title>Search Results - MMDB</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
         <div class="nav-container">
             <div class="nav-brand">
                 <a href="/" style="text-decoration: none; color: inherit;">
-                    <h1>CINE<span class="brand-highlight">SCOPE</span></h1>
+                    <h1><span class="brand-highlight">MMDB</span></h1>
                 </a>
             </div>
             <div class="nav-links">
